--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,46 +1,7 @@
 body {
-    font-family: 'Google Sans', Arial, Helvetica, sans-serif;
-    background-color: #1f232a;
-    color: #eee;
-}
-
-header {
-    position: fixed;
-    background: #5269aa;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    padding: 15px;
-    height: 15px;
-    box-shadow: 0px 5px 5px #000;
-    font-weight: 500;
-}
-
-p {
     margin: 0px;
-}
-
-.content {
-    margin-left: 8%;
-    margin-top: 90px;
-    width: 75%;
-}
-
-.white {
-    text-decoration: none;
-    color: #eee;
-    transition: none;
-}
-
-.white:hover, .white:active {
-    color: #eee;
-}
-
-a {
-    color: #8f9dc4;
-    transition: color 0.5s ease-in-out;
-}
-
-a:hover, a:active {
-    color: #465fa5;
+    padding: 0px;
+    left: 0px;
+    right: 0px;
+    position: fixed;
 }
