--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,11 +4,12 @@ body {
     left: 0px;
     right: 0px;
     position: fixed;
-    background-color: black;
+    background-color: #040b31;
 }
 
 main {
     position: fixed;
     right: 20%;
     top: 40%;
+    filter: blur(5px);
 }
