--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,9 +7,25 @@ body {
     background-color: #020413;
 }
 
+overlay {
+    position: fixed;
+    overflow: hidden;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #020413;
+    animation: fade 0.5;
+}
+
 main {
     position: fixed;
     right: -15%;
     top: 30%;
     filter: blur(7px) brightness(65%);
+}
+
+@keyframes fade {
+    from {opacity: 1}
+    to {opacity: 0}
 }
