--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,7 @@ overlay {
     height: 100%;
     background-color: #020413;
     animation: fade 0.5;
+    z-index: 9999;
 }
 
 main {
@@ -23,6 +24,7 @@ main {
     right: -15%;
     top: 30%;
     filter: blur(7px) brightness(65%);
+    z-index: 1;
 }
 
 @keyframes fade {
