--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ overlay {
     width: 100%;
     height: 100%;
     background-color: #020413;
-    animation: fade 0.5s;
+    animation: fade 1s forwards;
     z-index: 9999;
 }
 
