--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ body {
     right: 0px;
     position: fixed;
     background-color: #020413;
+    font-family: "Rubik", sans-serif;
 }
 
 overlay {
@@ -30,4 +31,12 @@ main {
 @keyframes fade {
     from {opacity: 1}
     to {opacity: 0}
+}
+
+header {
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
+    height: 20%;
+    background-color: aliceblue;
 }
