--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,6 +37,7 @@ header {
     position: fixed;
     overflow: hidden;
     width: 100%;
-    height: 20%;
+    height: 7%;
     background-color: aliceblue;
+    z-index: 2;
 }
