--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ body {
     right: 0px;
     position: fixed;
     background-color: #020413;
+    color: #fff;
     font-family: "Rubik", sans-serif;
 }
 
@@ -16,7 +17,7 @@ overlay {
     width: 100%;
     height: 100%;
     background-color: #020413;
-    animation: fade 1s forwards;
+    animation: fade 1.5s forwards;
     z-index: 9999;
 }
 
@@ -28,16 +29,98 @@ main {
     z-index: 1;
 }
 
-@keyframes fade {
-    from {opacity: 1}
-    to {opacity: 0}
-}
-
 header {
     position: fixed;
     overflow: hidden;
     width: 100%;
-    height: 7%;
-    background-color: aliceblue;
-    z-index: 2;
+    height: 10%;
+    background-color: #020413;
+    z-index: 9998;
+}
+
+.menu-icon {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    opacity: 0;
+    animation: slide-logo 1s forwards 0.3s;
+}
+
+.menu-1 {opacity: 0; animation: slide 1s forwards 0.5s;}
+.menu-2 {opacity: 0; animation: slide 1s forwards 0.7s;}
+.menu-3 {opacity: 0; animation: slide 1s forwards 0.9s;}
+.menu-4 {opacity: 0; animation: slide 1s forwards 1.1s;}
+
+.main {
+    position: fixed;
+    left: 5vw;
+    z-index: 3;
+    user-select: none;
+}
+
+.title {
+    position: fixed;
+    font-weight: normal;
+    top: 30vh;
+    font-size: 100px;
+}
+
+.links {
+    position: fixed;
+    top: 0px;
+}
+
+ul {
+    position: fixed;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    height: 10vh;
+    right: 2.5%;
+    user-select: none;
+}
+
+li {
+    float: right;
+    font-size: 20px;
+}
+
+li * {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 30px;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+a:hover {
+    color: rgb(206, 162, 121);
+}
+
+.fade {
+    animation: fade 1s forwards;
+}
+
+@keyframes fade {
+    from {opacity: 1; z-index: 9999;}
+    to {opacity: 0; z-index: 0;}
+}
+
+@keyframes slide {
+    from {opacity: 0; top: -10px;}
+    to {opacity: 1; top: 0px;}
+}
+
+@keyframes slide-logo {
+    from {opacity: 0; top: 5px;}
+    to {opacity: 1; top: 15px;}
 }
