--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,6 +21,10 @@ overlay {
     z-index: 9999;
 }
 
+img {
+    user-select: none;
+}
+
 main {
     position: fixed;
     right: -15%;
@@ -103,12 +107,14 @@ a {
 }
 
 a:hover {
-    color: rgb(206, 162, 121);
+    color: #7eadeb;
 }
 
-.fade {
-    animation: fade 1s forwards;
-}
+.un-slide-1 {animation: slide 1s reverse 1.1s;}
+.un-slide-2 {animation: slide 1s reverse 0.9s;}
+.un-slide-3 {animation: slide 1s reverse 0.7s;}
+.un-slide-4 {animation: slide 1s reverse 0.5s;}
+.un-slide-logo {animation: slide-logo 1s reverse 0.3;}
 
 @keyframes fade {
     from {opacity: 1; z-index: 9999;}
@@ -123,4 +129,8 @@ a:hover {
 @keyframes slide-logo {
     from {opacity: 0; top: 5px;}
     to {opacity: 1; top: 15px;}
+}
+
+.current {
+    color: #888;
 }
